--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ renpy-8.1.3-sdk/HowdeyAbbey-1.0-dists/HowdeyAbbey-1.0-web.zip
 renpy-8.1.3-sdk/HowdeyAbbey-1.0-dists/HowdeyAbbey-1.0-web/game.zip
 renpy-8.1.3-sdk/HowdeyAbbey-1.0-dists/HowdeyAbbey-1.0-web/game.zip
 renpy-8.1.3-sdk/HowdeyAbbey-1.0-dists/HowdeyAbbey-1.0-web.zip
+renpy-8.1.3-sdk/HowdeyAbbey-1.0-dists/HowdeyAbbey-1.0-web.zip
+renpy-8.1.3-sdk/HowdeyAbbey-1.0-dists/HowdeyAbbey-1.0-web/game.zip
